src/styles/_variables.scss
$font-cinzel: 'Cinzel Decorative', serif;
$font-roboto: 'Roboto Condensed', sans-serif;
$font-open-sans: 'Open Sans', sans-serif;
$font-outfit: 'Outfit', sans-serif;
$font-schoolbell: 'Schoolbell', cursive;

:root {
  --primary-color: #349bd3;
  --gray: #827f7f;
  --gray-opacity: #242424cc;
  --border-color: #80808033;

  --bg-color: #d4d4d4;
  --text-color: #0f0f0f;
  --navbar-color: #9f9f9f;
  --card-color: #aaaaaacc;

  --React: #61dbfb;
  --Typescript: #358ef1;
  --Javascript: #f0db4f;
  --CSS: #264de4;
  --HTML: #e34c26;
  --API: #c7c7c7;
  --Bibliotecas: #8b8b8b;
}

.dark {
  --bg-color: #0f0f0f;
  --text-color: #d4d4d4;
  --navbar-color: #161616;
  --card-color: #242424cc;
}

